--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/goopscoop/lunchbreakninja",
   "dependencies": {
+    "async": "^0.9.0",
     "bcrypt": "^0.8.2",
     "body-parser": "^1.12.2",
     "connect-flash": "^0.1.1",
